# NoteRanger

./: CMakeLists.txt  Makefile  README.md  index.html  params.json  searchNotes.html  settings
js/: IndexEntries.js  TupleStorage.js  test.js
query/js/: IndexEntries.js  TupleStorage.js  test.js
src/: CommonMacros.hpp  DocumentDB.cpp  DocumentDB.hpp  Main.cpp  Parser.cpp  Parser.hpp  Term.cpp  Term.hpp  TermDB.cpp  TermDB.hpp
test/: fileList
test/docs/: bar  foo
